--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@ body{
   </main>
 <!-- Footer 聯絡資訊 -->
 <div class="credits text-base text-gray-600 leading-snug">
-  © 2025 Christina Yu. All rights reserved. <br />
   <a href="mailto:mamahowma@gmail.com" class="underline text-blue-700"><i class="fa-solid fa-envelope text-2xl"></i></a>　<a href="https://www.facebook.com/mamahowma" target="_blank" class="text-blue-600"><i class="fa-brands fa-facebook text-2xl"></i></a>　<a href="https://portaly.cc/mamahowma/support" target="_blank" class="text-yellow-700"><i class="fa-solid fa-mug-hot text-2xl"></i></a> 
-</div>
+ <br />
+  © 2025 Christina Yu. All rights reserved.</div>
 
 
 
@@ -642,3 +642,4 @@ body{
 </script>
 </body>
 </html>
+
